# fine-tuning

./: .gitignore  AGENTS.md  CLAUDE.md  main.py  pyproject.toml
.gemini/: .GEMINI.md  GEMINI.md
