[project]
name = "fine-tuning"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "trl>=0.8.0",
    "accelerate>=0.29.0",
    "peft>=0.10.0",
    "torch>=2.3.0",
]

[project.optional-dependencies]
# Apple Silicon (M chips): MPS backend is built into standard PyTorch.
# Unsloth is CUDA-only; MPS fine-tuning uses standard PEFT + TRL.
mps = []
# NVIDIA GPU: Unsloth + QLoRA via bitsandbytes; torch is overridden to CUDA build via [tool.uv.sources]
cuda = [
    "unsloth[cu124-torch260]",
    "bitsandbytes>=0.43.0",
]

# ── PyTorch source overrides ──────────────────────────────────────────────────
# On non-macOS platforms (Linux/Windows), pull torch from the PyTorch CUDA index.
# On macOS (darwin), the standard PyPI torch wheel includes MPS automatically.
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
# xformers requires CUDA and OpenMP — skip it on macOS (MPS uses PyTorch's built-in kernels)
override-dependencies = [
    "xformers; sys_platform == 'linux'",
]

[tool.uv.extra-build-dependencies]
xformers = ["torch"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]
