[project]
name = "fine-tuning"
version = "0.1.0"
description = "Repository to load and fine-tune large language models (LLMs) for various applications that can be later used in Ollama."
readme = "CLAUDE.md"
requires-python = ">=3.13"
dependencies = [
    "unsloth",
    "torch",
]

[tool.uv]
managed = true
dev-dependencies = []
